# flaw2flow

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  mypy.ini  pyproject.toml
flaw2flow/: f2f.py  f2f_guard.py  validator_collector.py
flaw2flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
flaw2flow/sandbox/: constructor_missing_validation.py  miss_bool_validation.py  miss_bytes_validation.py  miss_dict_validation.py  miss_float_validation.py  miss_list_validation.py  miss_numeric_list_validation.py  miss_string_list_validation.py  miss_string_validation.py  miss_tuple_validation.py  miss_union_complex_member.py  miss_union_member.py  miss_validation_int.py  ok_bool_validated.py  ok_bytes_validated.py  ok_constructor_validated.py  ok_dict_validated.py  ok_float_validated.py  ok_list_numeric.py  ok_list_validated.py  ok_simple_int.py  ok_string_list_validated.py  ok_string_validated.py  ok_tuple_validated.py  ok_union_complex.py  ok_union_int_str.py  wrong_bool_validator.py  wrong_bytes_validator.py  wrong_dict_validator.py  wrong_float_validator.py  wrong_list_string.py  wrong_list_validator.py  wrong_numeric_list_validator.py  wrong_string_list_validator.py  wrong_string_validator.py  wrong_tuple_validator.py  wrong_validation_int.py
